--- a/app/src/main/res/layout/fragment_tracking.xml
+++ b/app/src/main/res/layout/fragment_tracking.xml
@@ -337,7 +337,7 @@
                             <TextView
                                 android:id="@+id/Pismeni"
                                 android:layout_width="match_parent"
-                                android:layout_height="5dp"
+                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:text="Pismena dijagnoza:"
                                 android:textColor="@color/lightteal2"/>
