--- a/app/src/main/res/layout/recyclertreatment.xml
+++ b/app/src/main/res/layout/recyclertreatment.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="400dp"
-        android:layout_height="100dp"
+        android:layout_height="130dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
@@ -23,8 +23,8 @@
 
             <TextView
                 android:id="@+id/NametreatTxt"
-                android:layout_width="254dp"
-                android:layout_height="70dp"
+                android:layout_width="270dp"
+                android:layout_height="53dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/alegreya_sc_italic"
                 android:text="TextView"
@@ -32,6 +32,20 @@
                 android:textSize="19sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.458"
+                app:layout_constraintStart_toEndOf="@+id/Imageim"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/treatarrayTxt"
+                android:layout_width="269dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="68dp"
+                android:fontFamily="@font/alegreya_sc_italic"
+                android:text="TextView"
+                android:textColor="@color/lightteal3"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.464"
                 app:layout_constraintStart_toEndOf="@+id/Imageim"
                 app:layout_constraintTop_toTopOf="parent" />
 
